# amok

./: .gitignore  README.md  pyproject.toml
examples/: 01_bootstrap.py  02_post.py  03_follow_and_read.py
src/amok/: __init__.py  api.py  cli.py  logging.py  models.py
tests/: test_api.py
