[tool.poetry]
name = "amok"
version = "0.1.0"
description = "Peer to peer Personal Status Updates"
authors = ["Harshad Sharma <harshad@sharma.io>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "amok", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
kademlia = "^2.2.2"
click = "^8.1.3"
keyring = "^24.2.0"
passlib = "^1.7.4"
argon2-cffi = "^21.3.0"
PyNaCl = "^1.5.0"
asgiref = "^3.7.2"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
amok = "amok.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"